--- a/src/Components/common/ToggleThemeButton/toggleDarkMode.css
+++ b/src/Components/common/ToggleThemeButton/toggleDarkMode.css
@@ -1,108 +1,49 @@
-.switch-mode {
-  font-size: 17px;
-  position: relative;
-  display: inline-block;
-  width: 64px;
-  height: 34px;
+.Paper_toggle_mode {
+  background-color: var(--PaperBg-color-theme);
+  /* margin: 1px; */
+  padding: 4px;
+  /* box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); */
+  border-radius: 8px;
 }
 
-.switch-mode input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-.slider {
-  position: absolute;
+.toggle-mode {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  display: grid;
+  place-items: center;
   cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #2a6f97;
-  transition: 0.4s;
-  border-radius: 30px;
+  /* box-shadow: 0 0 50px 20px rgba(0, 0, 0, 0.1); */
+  line-height: 1;
 }
 
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 30px;
-  width: 30px;
-  border-radius: 20px;
-  left: 2px;
-  bottom: 2px;
-  z-index: 2;
-  background-color: #e8e8e8;
-  transition: 0.4s;
+.input-mode {
+  display: none;
 }
 
-.sun-mode svg {
-  position: absolute;
-  top: 5.5px;
-  left: 36px;
-  z-index: 1;
-  width: 24px;
-  height: 24px;
-  margin: auto;
+.icon {
+  grid-column: 1 / 1;
+  grid-row: 1 / 1;
+  transition: transform 500ms;
 }
 
-.moon-mode svg {
-  fill: #73c0fc;
-  position: absolute;
-  top: 5px;
-  left: 5px;
-  z-index: 1;
-  width: 24px;
-  height: 24px;
+.icon--moon {
+  /* transition-delay: 200ms; */
 }
 
-/* .switch:hover */
-.sun-mode svg {
-  animation: rotate 15s linear infinite;
+.icon--sun {
+  transform: scale(0);
 }
 
-@keyframes rotate {
-  0% {
-    transform: rotate(0);
-  }
-
-  100% {
-    transform: rotate(360deg);
-  }
+#switch:checked + .icon--moon {
+  transform: rotate(360deg) scale(0);
 }
 
-/* .switch:hover */
-.moon-mode svg {
-  animation: tilt 5s linear infinite;
+#switch:checked ~ .icon--sun {
+  transition-delay: 200ms;
+  transform: scale(1) rotate(360deg);
 }
 
-@keyframes tilt {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  25% {
-    transform: rotate(-10deg);
-  }
-
-  75% {
-    transform: rotate(10deg);
-  }
-
-  100% {
-    transform: rotate(0deg);
-  }
-}
-
-.input-mode:checked + .slider {
-  background-color: #183153;
-}
-
-.input-mode:focus + .slider {
-  box-shadow: 0 0 1px #183153;
-}
-
-.input-mode:checked + .slider:before {
-  transform: translateX(30px);
+.w-8 {
+  width: 2rem /* 32px */;
 }
