--- a/src/Components/common/ToggleThemeButton/toggleDarkMode.css
+++ b/src/Components/common/ToggleThemeButton/toggleDarkMode.css
@@ -1,14 +1,14 @@
 .Paper_toggle_mode {
   background-color: var(--PaperBg-color-theme);
   /* margin: 1px; */
-  padding: 4px;
+  /* padding: 4px; */
   /* box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); */
-  border-radius: 8px;
+  border-radius: 28px;
 }
 
 .toggle-mode {
-  width: 32px;
-  height: 32px;
+  width: 42px;
+  height: 42px;
   border-radius: 50%;
   display: grid;
   place-items: center;
