--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,14 @@ input {
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
 }
+.Paper_Contents_info {
+  background-color: #dadada;
+  /* margin: 1px; */
+  padding: 4px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  margin-top: 2px;
+}
 
 .Input_text {
   height: 40px;
