--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
 }
 
 body {
-  /* background-image: url("https://w0.peakpx.com/wallpaper/228/206/HD-wallpaper-abstract-colorful-color-burst-iphone.jpg");
+  /* background-image: url("https://image.slidesdocs.com/responsive-images/docs/border-with-a-pattern-of-black-gold-page-border-background-word-template_2a0aeb7c9f__1131_1600.jpg");
   background-size: cover;
   background-position: center; */
   font-weight: 400;
@@ -24,7 +24,7 @@ body {
 }
 
 bodyfont {
-  font-family: "Poppins", sans-serif;
+  font-family: "Inter Variable", sans-serif;
   font-weight: 400;
 }
 
