--- a/src/Components/common/ButtonLogout/ButtonLogout.css
+++ b/src/Components/common/ButtonLogout/ButtonLogout.css
@@ -45,7 +45,7 @@
   opacity: 0;
   color: var(--af-white);
   font-size: 1em;
-  font-family: "Poppins", sans-serif;
+  font-family: "Inter Variable", sans-serif;
   font-weight: 400;
   transition-duration: 0.3s;
 }
